--- a/Watchlist.html
+++ b/Watchlist.html
@@ -528,42 +528,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://image.tmdb.org/t/p/original/iLgRu4hhSr6V1uManX6ukDriiSc.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Life of Pi</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2012</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://image.tmdb.org/t/p/original/v5D7K4EHuQHFSjveq8LGxdSfrGS.jpg"
               class="movie-poster"
             />
@@ -600,17 +564,17 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://image.tmdb.org/t/p/original/pTSkqMvYvVI5jH8dSqUHTieg9hu.jpg"
+              src="https://image.tmdb.org/t/p/original/zUybYvxWdAJy5hhYovsXtHSWI1l.jpg"
               class="movie-poster"
             />
-            <h2 class="movie-title">The Bucket List</h2>
+            <h2 class="movie-title">Gran Torino</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
                   ><img src="./images/IMDb_logo.png" /> TBA</span
                 >
               </div>
-              <span class="movie-year-text">2007</span>
+              <span class="movie-year-text">2008</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -636,17 +600,53 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://image.tmdb.org/t/p/original/nzCMu6D5q60i2bVrIQ0DxlRSgCZ.jpg"
+              src="https://image.tmdb.org/t/p/original/u3EEVihxNbFIOvnUkBJIJK93Jcn.jpg"
               class="movie-poster"
             />
-            <h2 class="movie-title">West Side Story</h2>
+            <h2 class="movie-title">Hereditary</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
                   ><img src="./images/IMDb_logo.png" /> TBA</span
                 >
               </div>
-              <span class="movie-year-text">1961</span>
+              <span class="movie-year-text">2018</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/3S37Csd8Q4093B0WcLNL5wzevNJ.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Tootsie</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">1982</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
